Fix the "about" section on smaller monitors

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -102,7 +102,7 @@ input, select, textarea {
 		line-height: 1.85em;
 		color: #888;
 		font-weight: 300;
-		font-size: 13pt;
+		font-size: 12pt;
 	}
 
 	a {
@@ -2109,7 +2109,7 @@ input, select, textarea {
 	}
 
 	#about {
-		padding: 10em 0 10em 0;
+		padding: 2em 0 2em 0;
 		text-align: left;
 	}
 
@@ -2117,7 +2117,7 @@ input, select, textarea {
 			border-radius: 100%;
 			width: 20em;
 			height: 20em;
-			margin: 0;
+			margin: 5em 0;
 		}
 
 			#about .image img {
